# CVFinal_HVD

./: .gitignore  CMakeLists.txt  README  README.md
doc/: Doxyfile  mainpage.h
gui/: hdgui.fbp  hvd.cpp  hvd.h
gui/cvpanel/: cvpanel.cpp  cvpanel.h
lib/icutils/: CMakeLists.txt  datasync.h  icutils.h  sem.cpp  sem.h  thread_runner.cpp  thread_runner.h
lib/icv/: CMakeLists.txt  cvshm.cpp  cvshm.h  icv.h  vidreader.cpp  vidreader.h
lib/osdep/: CMakeLists.txt  gettime.cpp  msleep.cpp  osdep.h
src/hvdgui/: hvdapp.cpp  hvdapp.h  hvdcore_extfunc.h  hvdframe.cpp  hvdframe.h  hvdlogger.cpp  hvdlogger.h
src/hvdmain/: detcore.cpp  detcore.h  hvdmain.cpp  vidplayer.cpp  vidplayer.h  vidprocessor.cpp  vidprocessor.h
